Moved jquery inside the package to make it self-contained. Did some cleanup of unused, commented-out elements.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <link rel="icon" href="moon.png">
 <link rel="stylesheet" href="index.css">
 <title>Sleep Tracker</title>
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <script src="/lib/jquery.js"></script>
-  <script src="sleep.js"></script>
-  <div id="buttons"></div>
-<!--  <button id="copy">Copy</button>
-      <input id="paste"></input>-->
-  <div id="calendar">
-  </div>
+<script src="jquery.js"></script>
+<script src="sleep.js"></script>
+<div id="buttons"></div>
+<div id="calendar"></div>
 
   
