Updated color scheme, and added Github Pages link to README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <link rel="icon" href="moon.png">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="index.css?2">
 <title>Sleep Tracker</title>
 <script src="jquery.js"></script>
 <script src="sleep.js"></script>
