Added the preferences window

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <script src="sleep.js"></script>
 <div id="buttons"></div>
 <div id="calendar"></div>
+<div id="preferences">
+  <div id="dividinghour">
+  <h2>Dividing Hour</h2>
+  <p>The local hour when a new day starts.  Choose a time after you
+    wake up and before you go to sleep.</p>
+  <input type="range" from=0 to=24 step=1>
+  </div>
 
+</div>
   
